[gd_scene load_steps=10 format=3 uid="uid://csnaat1gu7uyn"]

[ext_resource type="Theme" uid="uid://bqgwg6jqqupa1" path="res://UI/scenes/MainMenu/MainMenuTheme.tres" id="1_hvcae"]
[ext_resource type="Script" path="res://UI/scenes/MainMenu/MainMenu.gd" id="1_o5ron"]
[ext_resource type="Texture2D" uid="uid://bc0o23n8qb5lg" path="res://Assets/background/desert_background0.png" id="3_1fw0u"]
[ext_resource type="Texture2D" uid="uid://b8pjbvcb4rg6p" path="res://Assets/background/desert_background7.png" id="3_cra6a"]
[ext_resource type="Texture2D" uid="uid://w0mv0i250270" path="res://Assets/background/desert_background1.png" id="4_yhw4u"]
[ext_resource type="Texture2D" uid="uid://c1xxpa77xqar7" path="res://Assets/background/desert_background2.png" id="5_lgscq"]
[ext_resource type="Texture2D" uid="uid://cv16ledvpvntq" path="res://Assets/background/desert_background6.png" id="6_6v8km"]
[ext_resource type="Texture2D" uid="uid://dcrdx8pqawvkk" path="res://Assets/background/desert_background4.png" id="8_5mhuv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_val4m"]
bg_color = Color(1, 0.48886, 0.469093, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_hvcae")
script = ExtResource("1_o5ron")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="BackgroundLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.1, 0)
motion_mirroring = Vector2(1008, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/BackgroundLayer"]
scale = Vector2(1.44, 1.44)
texture = ExtResource("3_1fw0u")
centered = false

[node name="TreeTopLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 0.5)
motion_mirroring = Vector2(1008, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/TreeTopLayer"]
scale = Vector2(1.44, 1.44)
texture = ExtResource("4_yhw4u")
centered = false

[node name="RockFaceLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1008, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/RockFaceLayer"]
scale = Vector2(1.44, 1.44)
texture = ExtResource("5_lgscq")
centered = false

[node name="BackSpikesLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(1.5, 1.5)
motion_mirroring = Vector2(1008, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/BackSpikesLayer"]
scale = Vector2(1.44, 1.44)
texture = ExtResource("8_5mhuv")
centered = false

[node name="MidSpikesLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(1.75, 1.75)
motion_mirroring = Vector2(1008, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/MidSpikesLayer"]
scale = Vector2(1.44, 1.44)
texture = ExtResource("6_6v8km")
centered = false

[node name="FrontSpikesLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(2, 2)
motion_mirroring = Vector2(1008, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/FrontSpikesLayer"]
scale = Vector2(1.44, 1.44)
texture = ExtResource("3_cra6a")
centered = false

[node name="MainMenuCamera" type="Camera2D" parent="."]
offset = Vector2(400, 324)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="GameTitleLabel" type="Label" parent="CanvasLayer"]
offset_left = 288.0
offset_top = 112.0
offset_right = 864.0
offset_bottom = 192.0
theme = ExtResource("1_hvcae")
theme_override_font_sizes/font_size = 40
text = "We Need a Name!!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerNameField" type="TextEdit" parent="CanvasLayer"]
offset_left = 288.0
offset_top = 192.0
offset_right = 864.0
offset_bottom = 240.0
placeholder_text = "Player Name"

[node name="JoinAddressField" type="TextEdit" parent="CanvasLayer"]
offset_left = 656.0
offset_top = 368.0
offset_right = 784.0
offset_bottom = 432.0
text = "127.0.0.1"
placeholder_text = "host address"

[node name="JoinPortField" type="TextEdit" parent="CanvasLayer"]
offset_left = 800.0
offset_top = 368.0
offset_right = 864.0
offset_bottom = 432.0
text = "1992"
placeholder_text = "1992"

[node name="HostPortField" type="TextEdit" parent="CanvasLayer"]
offset_left = 688.0
offset_top = 272.0
offset_right = 864.0
offset_bottom = 336.0
text = "1992"
placeholder_text = "port (default 1992)"

[node name="HostGameButton" type="Button" parent="CanvasLayer"]
offset_left = 288.0
offset_top = 272.0
offset_right = 496.0
offset_bottom = 336.0
text = "Host Game"

[node name="JoinGameButton" type="Button" parent="CanvasLayer"]
offset_left = 288.0
offset_top = 368.0
offset_right = 496.0
offset_bottom = 432.0
text = "Join Game"

[node name="StartLanGameButton" type="Button" parent="CanvasLayer"]
offset_left = 288.0
offset_top = 464.0
offset_right = 864.0
offset_bottom = 528.0
text = "Play against computer (not yet)"

[node name="ErrorAlertLabel" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 384.0
offset_right = 768.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_val4m")
text = "default error message"
horizontal_alignment = 1
autowrap_mode = 3

[node name="HostPortLabel" type="Label" parent="CanvasLayer"]
offset_left = 528.0
offset_top = 272.0
offset_right = 656.0
offset_bottom = 336.0
text = "Port"
horizontal_alignment = 1
vertical_alignment = 1

[node name="JoinAddressPortLabel" type="Label" parent="CanvasLayer"]
offset_left = 512.0
offset_top = 368.0
offset_right = 640.0
offset_bottom = 432.0
text = "Address
Port"
horizontal_alignment = 1
autowrap_mode = 3

[node name="ErrorAlertLabelShowTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[connection signal="pressed" from="CanvasLayer/HostGameButton" to="." method="_on_host_game_button_pressed"]
[connection signal="pressed" from="CanvasLayer/JoinGameButton" to="." method="_on_join_game_button_pressed"]
[connection signal="pressed" from="CanvasLayer/StartLanGameButton" to="." method="_on_start_lan_game_button_pressed"]
[connection signal="timeout" from="ErrorAlertLabelShowTimer" to="." method="_on_error_alert_label_show_timer_timeout"]
